# sec_filing_tracker

./: Cargo.toml  README.md
src/: ai_analyzer.rs  company_facts.rs  diff.rs  error.rs  filing_fetcher.rs  filing_locator.rs  financial_metrics.rs  main.rs  models.rs  routes.rs  sec_client.rs  section_parser.rs  summarizer.rs  trend_analyzer.rs  warning_signs.rs
src/static/: app.js  index.html  styles.css
